--- a/front-end/login.html
+++ b/front-end/login.html
@@ -486,7 +486,7 @@
 
     <script>
         // API Configuration - Now using relative paths since frontend is served by backend
-        const API_BASE_URL = '/api/auth';
+        const API_BASE_URL = 'http://localhost:3000/api/auth';
 
         // DOM Elements
         const loginTab = document.querySelector('[data-tab="login"]');
